2014-02-21  Niibe Yutaka  <gniibe@fsij.org>

	* src/modp256k1.c (modp256k1_shift): Bug fix.

2014-02-20  Niibe Yutaka  <gniibe@fsij.org>

	* src/Makefile.in (CSRC): Add files of p256k1.

	* src/openpgp.c (cmd_pso): Support p256k1 for signature.

	* src/openpgp-do.c (algorithm_attr_p256k1): New.
	(gpg_do_write_prvkey): Support p256k1 for signature.
	(proc_key_import, gpg_do_table, gpg_do_public_key): Likewise.

	* src/Makefile.in (DEFS): Add -DRSA_SIG.

	* src/openpgp-do.c (gpg_do_write_prvkey): Use _p256r1.
	* src/openpgp.c (cmd_internal_authenticate): Likewise.

	* src/call-ec_p256k1.c: New.  Use call-ec.c.
	* src/call-ec_p256r1.c: Use call-ec.c.
	* src/call-ec.c: New.
	(ecdsa_sign): Change the signature.

2014-02-19  Niibe Yutaka  <gniibe@fsij.org>

	* tool/calc_precompute_table_ecc.py: New.

	* src/ec_p256k1.c: New.  Use ecc.c.
	* src/ec_p256k1.h: New.
	* src/ec_p256r1.c: Use ecc.c.
	* src/ecc.c: New.

2014-02-18  Niibe Yutaka  <gniibe@fsij.org>

	* src/jpc_p256k1.c: New.  Use jpc.c.
	* src/jpc_p256r1.c: Use jpc.c.
	* src/jpc.c: New.

	* src/sha256.c (memcpy_output_bswap32): Bug fix.

	* src/modp256k1.h, src/modp256k1.c: New.

2014-02-17  Niibe Yutaka  <gniibe@fsij.org>

	* src/Makefile.in (CSRC): Follow the changes of filenames.

	* src/modp256r1.c (modp256r1_add, modp256r1_sub, S3)
	(modp256r1_mul, modp256r1_sqr, modp256r1_inv, modp256r1_shift):
	Use new function names.
	* src/jpc_p256r1.c (jpc_double_p256r1, jpc_add_ac_signed_p256r1)
	(jpc_to_ac_p256r1): Likewise.
	* src/ec_p256r1.c (point_is_on_the_curve)
	(compute_kG_p256r1, compute_kP_p256r1): Likewise.
	* src/call-ec_p256r1.c (ecdsa_sign): Likewise.

	* src/modp256r1.h: Rename from modp256.h.
	* src/jpc-ac_p256r1.h: Rename from jpc-ac.h.
	* src/ec_p256r1.h: Rename from ec_p256.h.

	* src/modp256r1.c: Rename from modp256.c.
	* src/jpc_p256r1.c: Rename from jpc.c.
	* src/ec_p256r1.c: Rename from ec_p256.c.
	* src/call-ec_p256r1.c: Rename from call-ec_p256.c.

2014-02-05  NIIBE Yutaka  <gniibe@fsij.org>
